infra/vpc.json
{
    "AWSTemplateFormatVersion": "2010-09-09",
    "Description": "VPC with public and private subnets (2 AZs) & NAT",
    "Mappings": {
      "Networking": {
        "VPC": {
          "CIDR": "10.0.0.0/16"
        },
        "PublicSubnetOne": {
          "CIDR": "10.0.1.0/24"
        },
        "PublicSubnetTwo": {
          "CIDR": "10.0.2.0/24"
        },
        "PrivateSubnetOne": {
          "CIDR": "10.0.3.0/24"
        },
        "PrivateSubnetTwo": {
          "CIDR": "10.0.4.0/24"
        }
      }
    },
    "Resources": {
      "VPC": {
        "Type": "AWS::EC2::VPC",
        "Properties": {
          "EnableDnsSupport": "true",
          "EnableDnsHostnames": "true",
          "CidrBlock": {
            "Fn::FindInMap": [
              "Networking",
              "VPC",
              "CIDR"
            ]
          },
          "Tags": [
            {
              "Key": "Name",
              "Value": "VPC with public and private subnets (2 AZs) & NAT"
            }
          ]
        }
      },
      "InternetGateway": {
        "Type": "AWS::EC2::InternetGateway"
      },
      "GatewayToInternet": {
        "Type": "AWS::EC2::VPCGatewayAttachment",
        "Properties": {
          "VpcId": {
            "Ref": "VPC"
          },
          "InternetGatewayId": {
            "Ref": "InternetGateway"
          }
        }
      },
      "NATGatewayOne": {
        "DependsOn": "GatewayToInternet",
        "Type": "AWS::EC2::NatGateway",
        "Properties": {
          "AllocationId": {
            "Fn::GetAtt": [
              "ElasticIPOne",
              "AllocationId"
            ]
          },
          "SubnetId": {
            "Ref": "PublicSubnetOne"
          }
        }
      },
      "ElasticIPOne": {
        "Type": "AWS::EC2::EIP",
        "Properties": {
          "Domain": "vpc"
        }
      },
      "NATGatewayTwo": {
        "DependsOn": "GatewayToInternet",
        "Type": "AWS::EC2::NatGateway",
        "Properties": {
          "AllocationId": {
            "Fn::GetAtt": [
              "ElasticIPTwo",
              "AllocationId"
            ]
          },
          "SubnetId": {
            "Ref": "PublicSubnetTwo"
          }
        }
      },
      "ElasticIPTwo": {
        "Type": "AWS::EC2::EIP",
        "Properties": {
          "Domain": "vpc"
        }
      },
      "PublicRouteTable": {
        "Type": "AWS::EC2::RouteTable",
        "Properties": {
          "VpcId": {
            "Ref": "VPC"
          }
        }
      },
      "PublicRoute": {
        "Type": "AWS::EC2::Route",
        "Properties": {
          "RouteTableId": {
            "Ref": "PublicRouteTable"
          },
          "DestinationCidrBlock": "0.0.0.0/0",
          "GatewayId": {
            "Ref": "InternetGateway"
          }
        }
      },
      "PublicSubnetOne": {
        "Type": "AWS::EC2::Subnet",
        "Properties": {
          "VpcId": {
            "Ref": "VPC"
          },
          "MapPublicIpOnLaunch": true,
          "CidrBlock": {
            "Fn::FindInMap": [
              "Networking",
              "PublicSubnetOne",
              "CIDR"
            ]
          },
          "AvailabilityZone": {
            "Fn::Select": [
              "0",
              {
                "Fn::GetAZs": {
                  "Ref": "AWS::Region"
                }
              }
            ]
          },
          "Tags": [
            {
              "Key": "Name",
              "Value": "Public subnet #1"
            }
          ]
        }
      },
      "PublicSubnetOneRouteTableAssociation": {
        "Type": "AWS::EC2::SubnetRouteTableAssociation",
        "Properties": {
          "SubnetId": {
            "Ref": "PublicSubnetOne"
          },
          "RouteTableId": {
            "Ref": "PublicRouteTable"
          }
        }
      },
      "PublicSubnetTwo": {
        "Type": "AWS::EC2::Subnet",
        "Properties": {
          "VpcId": {
            "Ref": "VPC"
          },
          "MapPublicIpOnLaunch": true,
          "CidrBlock": {
            "Fn::FindInMap": [
              "Networking",
              "PublicSubnetTwo",
              "CIDR"
            ]
          },
          "AvailabilityZone": {
            "Fn::Select": [
              "1",
              {
                "Fn::GetAZs": {
                  "Ref": "AWS::Region"
                }
              }
            ]
          },
          "Tags": [
            {
              "Key": "Name",
              "Value": "Public subnet #2"
            }
          ]
        }
      },
      "PublicSubnetTwoRouteTableAssociation": {
        "Type": "AWS::EC2::SubnetRouteTableAssociation",
        "Properties": {
          "SubnetId": {
            "Ref": "PublicSubnetTwo"
          },
          "RouteTableId": {
            "Ref": "PublicRouteTable"
          }
        }
      },
      "PrivateRouteTableOne": {
        "Type": "AWS::EC2::RouteTable",
        "Properties": {
          "VpcId": {
            "Ref": "VPC"
          }
        }
      },
      "PrivateRouteToInternetOne": {
        "Type": "AWS::EC2::Route",
        "Properties": {
          "RouteTableId": {
            "Ref": "PrivateRouteTableOne"
          },
          "DestinationCidrBlock": "0.0.0.0/0",
          "NatGatewayId": {
            "Ref": "NATGatewayOne"
          }
        }
      },
      "PrivateSubnetOneRouteTableAssociation": {
        "Type": "AWS::EC2::SubnetRouteTableAssociation",
        "Properties": {
          "SubnetId": {
            "Ref": "PrivateSubnetOne"
          },
          "RouteTableId": {
            "Ref": "PrivateRouteTableOne"
          }
        }
      },
      "PrivateSubnetOne": {
        "Type": "AWS::EC2::Subnet",
        "Properties": {
          "VpcId": {
            "Ref": "VPC"
          },
          "CidrBlock": {
            "Fn::FindInMap": [
              "Networking",
              "PrivateSubnetOne",
              "CIDR"
            ]
          },
          "AvailabilityZone": {
            "Fn::Select": [
              "0",
              {
                "Fn::GetAZs": {
                  "Ref": "AWS::Region"
                }
              }
            ]
          },
          "Tags": [
            {
              "Key": "Name",
              "Value": "Private subnet #1"
            }
          ]
        }
      },
      "PrivateRouteTableTwo": {
        "Type": "AWS::EC2::RouteTable",
        "Properties": {
          "VpcId": {
            "Ref": "VPC"
          }
        }
      },
      "PrivateRouteToInternetTwo": {
        "Type": "AWS::EC2::Route",
        "Properties": {
          "RouteTableId": {
            "Ref": "PrivateRouteTableTwo"
          },
          "DestinationCidrBlock": "0.0.0.0/0",
          "NatGatewayId": {
            "Ref": "NATGatewayTwo"
          }
        }
      },
      "PrivateSubnetTwoRouteTableAssociation": {
        "Type": "AWS::EC2::SubnetRouteTableAssociation",
        "Properties": {
          "SubnetId": {
            "Ref": "PrivateSubnetTwo"
          },
          "RouteTableId": {
            "Ref": "PrivateRouteTableTwo"
          }
        }
      },
      "PrivateSubnetTwo": {
        "Type": "AWS::EC2::Subnet",
        "Properties": {
          "VpcId": {
            "Ref": "VPC"
          },
          "CidrBlock": {
            "Fn::FindInMap": [
              "Networking",
              "PrivateSubnetTwo",
              "CIDR"
            ]
          },
          "AvailabilityZone": {
            "Fn::Select": [
              "1",
              {
                "Fn::GetAZs": {
                  "Ref": "AWS::Region"
                }
              }
            ]
          },
          "Tags": [
            {
              "Key": "Name",
              "Value": "Private subnet #2"
            }
          ]
        }
      }
    }
  }
